bon/tests/integration/ui/compile_fail/attr_bon.stderr
error: Unknown field: `attrs`
 --> tests/integration/ui/compile_fail/attr_bon.rs:5:7
  |
5 | #[bon(attrs)]
  |       ^^^^^

error: #[builder] attributes on the receiver are not supported
  --> tests/integration/ui/compile_fail/attr_bon.rs:16:12
   |
16 |     fn sut(#[builder] &self) {}
   |            ^
